<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scrollbars="vertical"
		android:fillViewport="true">
	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:orientation="vertical">

		<TextView
			android:id="@+id/txtDefaultMessageAppWarning"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:autoText="false"
			android:fontFamily="@font/red_hat_display"
			android:text="@string/txtDefaultMessageAppWarning"
			android:textSize="24sp" />

		<TextView
			android:id="@+id/txtDefaultMessageAppPrompt"
			android:layout_width="fill_parent"
			android:layout_height="271dp"
			android:layout_gravity="bottom|clip_vertical|fill|fill_horizontal"
			android:fontFamily="@font/red_hat_text"
			android:password="false"
			android:text="@string/txtDefaultMessageAppPrompt"
			android:textStyle="normal" />

		<View
			android:id="@+id/divider2"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="?android:attr/listDivider" />

		<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="202dp"
			android:layout_marginTop="16dp"
			android:layout_marginBottom="16dp">

			<Button
				android:id="@+id/btnHelpMeSetDefaultMessagingApp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_alignParentBottom="true"
				android:layout_marginRight="222dp"
				android:layout_marginBottom="138dp"
				android:background="#2235A1"
				android:onClick="openDefaultMessageAppSettings"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:shadowColor="#171212"
				android:shadowDx="1"
				android:shadowDy="1"
				android:shadowRadius="0"
				android:singleLine="true"
				android:soundEffectsEnabled="true"
				android:text="@string/btnHelpMeSetDefaultMessagingApp"
				android:textColor="#FFFFFF" />

			<Button
				android:id="@+id/btnIDontCare"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_marginRight="-254dp"
				android:layout_marginBottom="138dp"
				android:layout_toLeftOf="@+id/btnHelpMeSetDefaultMessagingApp"
				android:background="#146302"
				android:onClick="dismissActivity"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:text="@string/btnIDontCare"
				android:textColor="#FFFFFF" />
		</RelativeLayout>

		<ProgressBar
			android:id="@+id/progressBar2"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" />

		<View
			android:id="@+id/divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="?android:attr/listDivider" />
	</LinearLayout>
</ScrollView>
